# beru

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_SUMMARY.md  GEMINI.md  IMPLEMENTATION_PROMPT.md  README.md  TESTING.md  eslint.config.js  index.html  npx_vitest16.txt  npx_vitest32.txt  p01_verify.txt  package-lock.json  package.json  pet-overlay.html  tsconfig.json  version.txt  vite.config.js  vitest.config.js  wmic_procs.txt
.antigravitycli/: cc37ec6d-8278-4e5a-a5b1-2072d4fc1eda.json
docs/: AUDIT-AUTO-UPDATER-PROMPT.md  dead-code-audit.md  signing.md
main/: encodeProfiles.js  main.js  pathSecurity.js  preload.cjs  shared-state.js  updater.js  videoProbe.js  workerPolicy.js
python/: _do_split.py  _split_map.py  batch_errors.py  benchmark_prueba.py  beru-processor.spec  build_excel_template.py  color_validation.py  delogo_chains.py  encode_profiles.py  op_shared.py  processor.py  test_batch_errors_perms.py  test_batch_summary_cancelled.py  test_crop_pipeline.py  test_delogo.py  test_delogo_e2e.py  test_delogo_feather0.py  test_delogo_robust.py  test_extract_error_line.py  test_letter_spacing.py  test_media_roots.py  test_op_shared.py  test_op_time_disabled.py  test_region_to_pixels.py  test_text_layout_fixtures.py  test_timed_crop_zoom.py  test_watermark_empty_ops.py  text_layout_helpers.py
resources/: encode-profiles.json  text-layout-fixtures.json
scripts/: benchmark-batch.ps1  benchmark-render.ps1  build-ffmpeg-minimal.ps1  (+9 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+352 files in other folders)
